--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,38 @@
-<app-menu-bar></app-menu-bar>
 
 <app-menu-title></app-menu-title>
 
 <div class="container-articles">
-    <div class="artciles-main">
-        <app-big-card></app-big-card>
-    </div>
-    <div class="artciles-others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-    </div>
+
+  <div class="artciles-main">
+    <app-big-card
+        id="1"
+        photoCover="https://images.unsplash.com/photo-1550009158-9ebf69173e03?q=80&w=1501&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        cardTitle=" Desbravando a Eficiência: Estratégias para Ganhar Produtividade no Estudo de Programação"
+        cardDescription=" Se você está mergulhando no vasto universo da programação, nosso blog é o seu guia essencial para impulsionar sua produtividade nos estudos. Descubra técnicas comprovadas, dicas práticas e abordagens inovadoras. "
+        >
+    </app-big-card>
+  </div>
+
+  <div class="artciles-others">
+    <app-small-card
+        id="2"
+        photoCard="https://plus.unsplash.com/premium_photo-1679177184014-16746957e4cc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE2fHx8ZW58MHx8fHx8"
+        titleCard="Profissão do Futuro, como entrar na área de programação de forma rápida."
+        >
+    </app-small-card>
+
+    <app-small-card
+        id="3"
+        photoCard="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        titleCard="Por que a área de cibersegurança está enfrentando a falta de mão de obra qualificada?"
+        >
+    </app-small-card>
+
+    <app-small-card
+        id="4"
+        photoCard="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        titleCard=" A Importância do Hardware: Desvendando o Coração da Eficiência Tecnológica."
+        >
+    </app-small-card>
+  </div>
 </div>
