--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<header>
+    <app-menu-bar></app-menu-bar>
+</header>
 <router-outlet></router-outlet>
-<!-- <app-menu-bar></app-menu-bar> -->
-<app-home></app-home>
+
+
