--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .user {
@@ -27,6 +28,7 @@
 .nav-itens li {
     font-size: 0.8rem;
     cursor: pointer;
+    letter-spacing: 0.7px;
 }
 
 .social-icons {
