--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -2,9 +2,9 @@
     <div class="navigation">
         <ul class="nav-itens">
             <div class="user">G</div>
-            <li>LEAN</li>
-            <li>BLOG</li>
-            <li>BLOOMAKERS</li>
+            <li><a href="">HOME</a></li>
+            <li>CONTATO</li>
+            <li>PUBLIQUE AQUI</li>
         </ul>
         <ul class="social-icons">
             <li>Twitter</li>
