--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,13 +1,14 @@
 .container-small-card {
     margin-bottom: 2rem;
+    padding-bottom: 1rem;
     display: flex;
     gap: 1.5rem;
     border-bottom: 1px solid #575656cb;
-    padding-bottom: 1rem;
 }
 
 .img-card img {
     width: 200px;
+   
     min-width: 200px
 }
 
@@ -16,4 +17,15 @@
     font-size: 1rem;
     line-height: 27px;
 
+}
+
+@media screen and (min-width:320px) and (max-width: 480px) {
+    .container-small-card {
+       flex-direction: column;
+    }
+
+    .img-card img {
+        width: 100%;
+        min-width: 200px;
+    }
 }
